// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphql: reset password should change the user password 1`] = `
Object {
  "data": Object {
    "resetUserPassword": Object {
      "message": "Password has been reset successfully",
      "success": true,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`graphql: reset password should throw an error if user is not found 1`] = `
Object {
  "data": Object {
    "resetUserPassword": null,
  },
  "errors": Array [
    [GraphQLError: Internal server error],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
